# discord-extended

./: Cargo.toml  README.md
actions/: soundboard_commands.rs  video_commands.rs  voice_settings.rs
assets/: manifest.json
assets/pi/: screenshare.html  simple.html  soundboard.html
assets/pi/_app/: version.json
assets/pi/_app/immutable/assets/: 0.Cs7Ocz4t.css
assets/pi/_app/immutable/chunks/: 7Lk0g4Fb.js  BHYZu-uo.js  BMsMjzt2.js  Baibx9qT.js  Bj2KK34T.js  C5xaTY9q.js  CBXhMY6b.js  CEgGNf8L.js  CqLaS-4n.js  Cwnp6hdK.js  DPaAumO9.js  DTnDnyyO.js  DtcIxBrp.js  fjMvz4jT.js  v0MDsa-o.js  vNkgzGKS.js
assets/pi/_app/immutable/entry/: app.CBEHFjSV.js  app.iIcxT4-b.js  start.C6zyRU2b.js  start.GJNWuXec.js
assets/pi/_app/immutable/nodes/: 0.CzpYFICL.js  0.DSodp1Ps.js  1.DlaKTMg8.js  1.U_LT6wU2.js  2.CPIfl5By.js  2.CfLKTbJg.js  3.AhLdloQD.js  3.BaLtTWIB.js  4.DfgISTzW.js
pi/: pnpm-lock.yaml
pi/src/lib/: ApplicationSettings.svelte  ScreenshareSettings.svelte  SoundboardSettings.svelte
pi/src/routes/: layout.css
pi/src/routes/screenshare/: +page.svelte
pi/src/routes/soundboard/: +page.svelte
src/: client.rs  main.rs
src/actions/: mod.rs  video_commands.rs
