[package]
name = "oadiscord"
edition = "2024"

[dependencies]
openaction = "2.3"
discord-ipc-rust = { git = "https://github.com/nekename/discord-ipc-rust.git" }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
log = "0.4"
simplelog = "0.12"
reqwest = { version = "0.12", features = ["json"] }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging"
] }
